Fix my videos channel name overflow

--- a/client/src/app/shared/shared-video-miniature/videos-selection.component.scss
+++ b/client/src/app/shared/shared-video-miniature/videos-selection.component.scss
@@ -40,6 +40,7 @@
 
   my-video-miniature {
     flex-grow: 1;
+    max-width: 100%;
   }
 }
 
